--- a/man/pdfcube.1
+++ b/man/pdfcube.1
@@ -43,7 +43,7 @@ PDF file to show.
 Don't activate full\-screen mode by default.
 .PP
 .SS Notes
-The "-i" option can be omitted, the first non-option string is treated
+The "\-i" option can be omitted, the first non\-option string is treated
 as the input file. 
 .SH "INTERACTIVE CONTROL"
 .TP
@@ -91,7 +91,7 @@ Will display 'foo.pdf' with custom background and cube color.
 is a known "feature": the program is oriented to view presentations on
 a projected screen.
 .PP
-On some systems color values are locale dependant (e.g. you may have
+On some systems color values are locale dependent (e.g. you may have
 to write 0,6 instead of 0.6)
 .PP
 See http://code.100allora.it/pdfcube/report/ for the bugtracker of
