Preparing version 0.0.5. Version 0.0.5 respects pdf aspect ratio, and has a nice programmable demo mode that can be used in trade shows or in timed presentations.
git-svn-id: http://code.100allora.it/svn/pdfcube/trunk@72 165fd137-3324-0410-9f0b-cb3619fb7445

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2012-03-23  Mirko Maischberger  <mirko.maischberger@gmail.com>
+	* src/pdfcube.cc, man/pdfcube.1: Improvements requested by Carl
+	Hoffman.
+
 2011-12-14  Mirko Maischberger  <mirko.maischberger@gmail.com>
 	* src/pdfcube.cc, man/pdfcube.1, m4/ax_booost_program_options.m4:
 	Andreas Moog patches.
